Add footer and its styles

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,6 +12,7 @@
 @import './components/header';
 @import './components/query-card';
 @import './components/query-details';
+@import './components/footer';
 
 //PAGES
 @import './pages/home';
